--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "npm run test",
     "wasm-init": "wasm-init",
-    "compile": "wasm-compile"
+    "compile": "wasm-compile",
+    "build": "webpack -c"
   },
   "repository": {
     "type": "git",
@@ -25,5 +26,19 @@
   "bugs": {
     "url": "https://github.com/alanmacleod/wasm-render/issues"
   },
-  "homepage": "https://github.com/alanmacleod/wasm-render#readme"
+  "homepage": "https://github.com/alanmacleod/wasm-render#readme",
+  "dependencies": {
+    "babel-core": "^6.18.2"
+  },
+  "devDependencies": {
+    "ava": "^0.19.1",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "babili-webpack-plugin": "^0.0.11",
+    "should": "^11.2.1",
+    "wasm-init": "0.0.38",
+    "wasm-loader": "^1.0.0",
+    "webpack": "^1.13.3"
+  }
 }
