--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "allowJs": true,
     "target": "es6",
-    
+    "outDir": "./pub/",
+    "sourceMap": true,
     "noFallthroughCasesInSwitch": false,
     "noImplicitReturns": true
   },
