--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "test": "npm run test",
     "wasm-init": "wasm-init",
     "compile": "wasm-compile",
-
     "build": "webpack",
     "watch": "webpack -w",
-
     "prebuildall": "wasm-compile",
     "buildall": "webpack"
   },
@@ -36,7 +34,8 @@
   },
   "homepage": "https://github.com/alanmacleod/wasm-render#readme",
   "dependencies": {
-    "babel-core": "^6.18.2"
+    "babel-core": "^6.18.2",
+    "parse-obj": "0.0.0"
   },
   "devDependencies": {
     "ava": "^0.19.1",
